--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cloud_firestore: 4.9.1
   provider: ^6.1.1
   video_player: ^2.8.1
-  file_picker: ^6.1.1
+  file_picker: ^5.2.10
   http: ^1.1.0
   crypto: ^3.0.0
   
@@ -29,6 +29,10 @@ dependencies:
   path_provider: ^2.1.1
   video_compress: ^3.1.2
   path_provider_platform_interface: ^2.1.1
+
+  wakelock: ^0.4.0
+  share_plus: ^7.2.1
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
