--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "video_sharing_app",
-    "short_name": "video_sharing_app",
+    "name": "For10Cloud",
+    "short_name": "For10",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#121212",
+    "theme_color": "#B71C1C",
+    "description": "Share videos and earn money with For10Cloud. Upload your content and earn up to ₹40,000 per video.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
@@ -18,18 +18,14 @@
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
         }
+    ],
+    "keywords": [
+        "for10",
+        "for10cloud",
+        "ForTen",
+        "video sharing",
+        "earn money",
+        "content creator"
     ]
 }
