--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,30 +9,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: 2.15.1
-  firebase_auth: 4.9.0
-  cloud_firestore: 4.9.1
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
   provider: ^6.1.1
   video_player: ^2.8.1
   file_picker: ^5.2.10
   http: ^1.1.0
   crypto: ^3.0.0
   
-  #cludeflare r2 SDK
-  amazon_cognito_identity_dart_2: ^3.5.0 
   aws_s3_api: ^2.0.0
   path: ^1.8.0
   mime: ^1.0.4
 
-  #file uploader
   ffmpeg_kit_flutter: ^5.1.0
   path_provider: ^2.1.1
   video_compress: ^3.1.2
   path_provider_platform_interface: ^2.1.1
 
-  wakelock: ^0.4.0
+  wakelock_plus: ^1.1.4
   share_plus: ^7.2.1
-  uni_links: ^0.5.1
+  app_links: ^3.4.1
 
 dev_dependencies:
   flutter_test:
